feat: 启动知识库服务并固化评审流程